[package]
name = "labeled"
version = "0.1.0"
authors = ["Amit Aryeh Levy <amit@amitlevy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.102", features = ["derive"]}
nom = "7"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
default = [ "dclabel", "buckle" ]
dclabel = []
buckle = []
